--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -9,53 +9,108 @@
     <title>{% block title %}My Site{% endblock %}</title>
 </head>
 <body>
-    <!-- Navbar -->
-    <nav class="navbar is-light" role="navigation" aria-label="main navigation">
+    <nav class="navbar" role="navigation" aria-label="main navigation">
         <div class="navbar-brand">
             <a class="navbar-item" href="/">
-                <img src="{{ url_for('static', filename='logo.jpg') }}" alt="Logo" width="50" height="50">
+                <!--<img src="{{ url_for('static', filename='logo.jpg') }}" alt="Logo" width="50" height="50">-->
+                <h1 class="subtitle">Gatcha System</h1>
+            </a>
+        
+            <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="test">
+            <span aria-hidden="true"></span>
+            <span aria-hidden="true"></span>
+            <span aria-hidden="true"></span>
+            <span aria-hidden="true"></span>
             </a>
         </div>
-
-        <div class="navbar-menu">
+        
+        <div id="test" class="navbar-menu">
             <div class="navbar-start">
-                <a class="navbar-item button is-primary" href="{{ url_for('home.homepage') }}">
+                <a class="navbar-item" href="{{ url_for('home.homepage') }}">
                     <span class="icon">
                         <i class="fa-solid fa-house"></i>
                     </span>
-                    Home
+                    <span>Home</span>
                 </a>
-            </div>
-
-            <div class="navbar-end">
-                {% if 'username' in session %}
-                    <div class="navbar-item">
-                        Hello,
+            
+                <a class="navbar-item">
+                    <span class="icon">
+                        <i class="fa-solid fa-book"></i>
+                    </span>
+                    <span>Test</span>
+                </a>
+            
+                <div class="navbar-item has-dropdown is-hoverable">
+                    <a class="navbar-link">
                         <span class="icon">
-                            <i class="fa-solid fa-user"></i>
+                            <i class="fa-solid fa-gear"></i>
                         </span>
-                        <b>{{ session['username'] }}</b>
+                        <span>More</span>
+                    </a>
+            
+                    <div class="navbar-dropdown">
+                        <a class="navbar-item">
+                            <span class="icon">
+                                <i class="fa-solid fa-question"></i>
+                            </span>
+                            <span>A</span>
+                        </a>
+                        <a class="navbar-item">
+                            <span class="icon">
+                                <i class="fa-solid fa-money-bill"></i>
+                            </span>
+                            <span>B</span>
+                        </a>
+                        <a class="navbar-item">
+                            <span class="icon">
+                                <i class="fa-solid fa-envelope"></i>
+                            </span>
+                            <span>C</span>
+                        </a>
+                        <hr class="navbar-divider">
+                        <a class="navbar-item">
+                            <span class="icon">
+                                <i class="fa-solid fa-pen-nib"></i>
+                            </span>
+                            <span>D</span>
+                        </a>
                     </div>
-                    <a class="navbar-item button is-danger" href="{{ url_for('auth.logout') }}">
-                        <span class="icon">
-                            <i class="fa-solid fa-arrow-right-to-bracket"></i>
-                        </span>
-                        Logout
-                    </a>
-                {% else %}
-                    <a class="navbar-item button is-primary" href="{{ url_for('auth.register_page') }}">
-                        <span class="icon">
-                            <i class="fa-solid fa-arrow-right-to-bracket"></i>
-                        </span>
-                        Register
-                    </a>
-                    <a class="navbar-item button is-primary" href="{{ url_for('auth.login_page') }}">
-                        <span class="icon">
-                            <i class="fa-solid fa-arrow-right-to-bracket"></i>
-                        </span>
-                        Login
-                    </a>
-                {% endif %}
+                </div>
+            </div>
+            
+            <!-- Navbar lato destro -->
+            <div class="navbar-end">
+                <div class="navbar-item">
+                    <div class="buttons">
+                        {% if 'username' in session %}
+                            <a class="button is-primary" href="{{ url_for('profile.profile') }}">
+                                <span class="icon">
+                                    <i class="fa-solid fa-circle-user"></i>
+                                </span>
+                                <span><strong>{{ session['username'] }}</strong></span>
+                            </a>
+                            <a class="button is-danger" href="{{ url_for('auth.logout') }}">
+                                <span class="icon">
+                                    <i class="fa-solid fa-door-open"></i>
+                                </span>
+                                <span>Log out</span>
+                            </a>
+                        {% else %}
+                            <a class="button is-primary" href="{{ url_for('auth.register') }}">
+                                <span class="icon">
+                                    <i class="fa-solid fa-pen-fancy"></i>
+                                </span>
+                                <strong>Register</strong>
+                            </a>
+                            <a class="button is-light" href="{{ url_for('auth.login') }}">
+                                <span class="icon">
+                                    <i class="fa-solid fa-arrow-right-to-bracket"></i>
+                                </span>
+                                <span>Log in</span>
+                            </a>
+                        {% endif %}
+                    </div>
+                </div>
             </div>
         </div>
     </nav>
@@ -66,6 +121,16 @@
             {% block content %}{% endblock %}
         </div>
     </section>
+
+    <!-- Footer section -->
+    <footer class="footer">
+        <div class="content has-text-centered">
+          <p>
+            <strong>Gatcha System</strong> by <i>Leonardo Pantani, Christian Sabella & Riccardo Fantasia</i>.
+            The <a href="https://github.com/LeonardoPantani/UNIPI-GatchaAndGames">source code</a> is licensed <a href="https://www.gnu.org/licenses/gpl-3.0.html#license-text">GPL-3.0</a>.
+          </p>
+        </div>
+      </footer>
 
     <script src="{{ url_for('static', filename='generic.js') }}"></script>
 </body>
