aggiornato template html e logo

--- a/app/home/templates/home/homepage.html
+++ b/app/home/templates/home/homepage.html
@@ -7,7 +7,7 @@
     <div class="column is-half">
         <!-- Logo -->
         <div class="has-text-centered">
-            <img src="{{ url_for('static', filename='logo.jpg') }}" alt="Logo" width="150" height="150">
+            <img src="{{ url_for('static', filename='logo_complete.png') }}" alt="Logo">
         </div>
 
         <!-- Titolo -->
