--- a/app/auth/templates/auth/register.html
+++ b/app/auth/templates/auth/register.html
@@ -7,14 +7,14 @@
     <div class="column is-half">
         <!-- Logo -->
         <div class="has-text-centered">
-            <img src="{{ url_for('static', filename='logo.jpg') }}" alt="Logo" width="150" height="150">
+            <img src="{{ url_for('static', filename='logo_complete.png') }}" alt="Logo">
         </div>
 
         <!-- Titolo form -->
         <h1 class="title has-text-centered">Register</h1>
 
         {% with messages = get_flashed_messages(with_categories=true) %}
-            <form action="{{ url_for('auth.register') }}" method="POST">
+            <form action="{{ url_for('auth_register') }}" method="POST">
                 <!-- Input Email -->
                 <div class="field">
                     <div class="control has-icons-left has-icons-right">
@@ -110,7 +110,7 @@
                         <button class="button is-link" type="submit">Submit</button>
                     </div>
                     <div class="control">
-                        <a href="{{ url_for('home.homepage') }}" class="button is-link is-light">Go to Homepage</a>
+                        <a href="" class="button is-link is-light">Go to Homepage</a>
                     </div>
                 </div>
             </form>
