--- a/app/auth/templates/auth/register.html
+++ b/app/auth/templates/auth/register.html
@@ -14,7 +14,7 @@
         <h1 class="title has-text-centered">Register</h1>
 
         {% with messages = get_flashed_messages(with_categories=true) %}
-            <form action="{{ url_for('auth_register') }}" method="POST">
+            <form action="{{ url_for('auth.register') }}" method="POST">
                 <!-- Input Email -->
                 <div class="field">
                     <div class="control has-icons-left has-icons-right">
